Update posts in Intellij IDEA.